--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "koa": "^2.0.0",
     "koa-bodyparser": "^2.0.1",
     "koa-convert": "^1.2.0",
+    "koa-github": "0.0.5",
     "koa-json": "^1.1.1",
     "koa-logger": "^1.3.0",
     "koa-onerror": "^3.0.1",
     "koa-router": "^7.0.0",
+    "koa-sess": "^0.4.1",
     "koa-static-plus": "^0.1.1",
     "koa-views": "^5.0.1",
     "lodash": "^4.11.1"
