--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "koa-logger": "^1.3.0",
     "koa-onerror": "^3.0.1",
     "koa-router": "^7.0.0",
-    "koa-sess": "^0.4.1",
+    "koa-session": "^5.5.0",
     "koa-static-plus": "^0.1.1",
     "koa-views": "^5.0.1",
     "lodash": "^4.11.1"
