--- a/package.json
+++ b/package.json
@@ -25,20 +25,22 @@
     "babel-preset-stage-3": "^6.5.0",
     "babel-runtime": "^6.6.1",
     "co": "^4.6.0",
+    "connect-ensure-login": "^0.1.1",
     "debug": "^2.2.0",
     "ejs": "^2.4.1",
     "koa": "^2.0.0",
     "koa-bodyparser": "^2.0.1",
     "koa-convert": "^1.2.0",
-    "koa-github": "0.0.5",
     "koa-json": "^1.1.1",
     "koa-logger": "^1.3.0",
     "koa-onerror": "^3.0.1",
+    "koa-passport": "^3.0.0",
     "koa-router": "^7.0.0",
     "koa-session": "^5.5.0",
     "koa-static-plus": "^0.1.1",
     "koa-views": "^5.0.1",
-    "lodash": "^4.11.1"
+    "lodash": "^4.11.1",
+    "passport-github": "^1.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
